--- a/admin-service/src/main/resources/bootstrap.yml
+++ b/admin-service/src/main/resources/bootstrap.yml
@@ -6,3 +6,6 @@ spring:
   cloud:
     config:
       uri: http://localhost:9090
+jwt:
+  secret: SecretKeyToGenJWTsAppBeblueApiPassword12938#$1289329732SJjkhdfkhdfkddf%%ldflkjdflkjfdljkdf
+  validityInMilliseconds: 3600000
