--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,3 +18,6 @@ eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka
+jwt:
+  secret: SecretKeyToGenJWTsAppBeblueApiPassword12938#$1289329732SJjkhdfkhdfkddf%%ldflkjdflkjfdljkdf
+  validityInMilliseconds: 3600000
