--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,10 +14,15 @@ hystrix:
             timeoutInMilliseconds: 10000
 ribbon:
   ReadTimeout: 10000
+
 eureka:
   client:
     service-url:
       default-zone: http://localhost:8761/eureka
+
 jwt:
   secret: SecretKeyToGenJWTsAppBeblueApiPassword12938#$1289329732SJjkhdfkhdfkddf%%ldflkjdflkjfdljkdf
   validityInMilliseconds: 3600000
+
+zuul:
+  sensitiveHeaders: Cookie,Set-Cookie
