--- a/climate-service/pom.xml
+++ b/climate-service/pom.xml
@@ -56,6 +56,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>br.com.ifood</groupId>
+			<artifactId>security-lib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
