--- a/music-service/pom.xml
+++ b/music-service/pom.xml
@@ -63,6 +63,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>br.com.ifood</groupId>
+			<artifactId>security-lib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
